--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "build": "npm run clean  && tsc && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
+    "prepare": "npm run build",
     "prepublishOnly": "npm run build",
     "rimraf": "./node_modules/rimraf/bin.js"
   },
